# IDF

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  opencode.json  plan IceData Forge.txt
.github/workflows/: deploy.yml
.opencode/agents/: tester-devops.md
chatbot/: .env.example  pyproject.toml  requirements.txt
chatbot/src/: __init__.py  api_client.py  config.py  keyboards.py  main.py
chatbot/src/handlers/: callback.py  compare.py  news.py  player.py  search.py  start.py
crates/ice-data-ai/: Cargo.toml
crates/ice-data-ai/src/: client.rs  lib.rs  parser.rs  prompts.rs
crates/ice-data-api/: Cargo.toml
crates/ice-data-api/src/: ai.rs  analytics.rs  analytics_engine.rs  cache.rs  error.rs  main.rs  news.rs  players.rs  teams.rs  webhooks.rs
crates/ice-data-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  webhook_auth.rs
crates/ice-data-core/: Cargo.toml
crates/ice-data-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/ice-data-db/: Cargo.toml
crates/ice-data-db/src/: lib.rs  migrations.rs  pool.rs  queries.rs
crates/ice-data-mcp/: Cargo.toml
crates/ice-data-mcp/src/: auth.rs  main.rs  protocol.rs  session.rs  tools.rs
crates/ice-data-nhl/: Cargo.toml
crates/ice-data-nhl/src/: client.rs  types.rs
dashboard/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  PlayerCard.tsx  SearchBar.tsx  Sidebar.tsx  StatsTable.tsx
dashboard/src/components/charts/: AdvancedMetricsChart.tsx  ComparisonChart.tsx  PointsChart.tsx
dashboard/src/pages/: Analytics.tsx  Compare.tsx  News.tsx  Overview.tsx  PlayerDetail.tsx  Players.tsx  Teams.tsx
dashboard/src/types/: index.ts
migrations/: 20240515000001_initial_schema.sql
n8n/: ai-analysis-workflow.json  news-collection-workflow.json  nhl-sync-workflow.json  player-monitoring-workflow.json
scripts/: deploy.ps1  deploy.sh  production.env.example
