[project]
name = "ice-data-bot"
version = "0.1.0"
description = "ICE DATA FORGE — Telegram bot for NHL player analytics"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
