[package]
name = "ice-data-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ice-data-core = { path = "../ice-data-core" }
ice-data-nhl = { path = "../ice-data-nhl" }
ice-data-db = { path = "../ice-data-db" }
ice-data-ai = { path = "../ice-data-ai" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
