[package]
name = "ice-data-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ice-data-core = { path = "../ice-data-core" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
